Fix map not visible without js enabled

--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -11,6 +11,10 @@ html, body {
     font-weight: bold;
 }
 
+.onlyjs {
+    display: none;
+}
+
 #map {
     height: 400px;
     background-color: gray;
